<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mywaves"
    tools:context=".act2"

    android:orientation="vertical"
 >






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >



        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
           app:lottie_repeatCount="2"
            android:longClickable="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="lockkey.json" />

        <TextView
            android:id="@+id/tvtu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#99141414"
            android:fontFamily="@font/alfa_slab_one"
            android:padding="10dp"
            android:text="@string/loginpage"
            android:textColor="@color/black"
            android:textSize="25dp" />


        <com.google.android.material.textfield.TextInputLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameText"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/use_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                      android:inputType="text"
                    android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                    android:textColorHint="@color/white" />




        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/passwordText"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="20dp"
            android:textAlignment="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/LoginPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:layout_height="wrap_content"/>




        </com.google.android.material.textfield.TextInputLayout>


        <Button

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/amaranth_bold_italic"
            android:onClick="login_button"
            android:text="@string/loginButton"
            android:background="@drawable/roundedbutton"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            android:textStyle="bold" />


        </LinearLayout>
</ScrollView>