<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mywaves"


    tools:context=".MainActivity">


 <LinearLayout
     android:id="@+id/Mylinear"

     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"


     >


     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"


         >




         <com.airbnb.lottie.LottieAnimationView

             android:id="@+id/school_image"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             app:lottie_autoPlay="true"
             app:lottie_fileName="welcomestudents.json"
             app:lottie_loop="true"


             />




     </RelativeLayout>


     <TextView
         android:id="@+id/e2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
          android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
         android:background="#99141414"
         android:fontFamily="casual"
         android:gravity="center"
         android:padding="10dp"
         android:text="@string/Welcome_message"
         android:textColor="@android:color/white"
         android:textSize="25dp"

         />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

    <androidx.cardview.widget.CardView
        android:id="@+id/student_card"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:clickable="true"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
       android:layout_margin="10dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            >

            <ImageView
                android:id="@+id/student_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:src="@drawable/studentgid"


                />

            <TextView
                android:id="@+id/student_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/student_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/Student_texteview"
                android:textColor="@android:color/black"
                android:textSize="20dp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/teacher_card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:clickable="true"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp"
           android:layout_margin="10dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <ImageView
                    android:id="@+id/teacher_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/teachergif" />

                <TextView
                    android:id="@+id/teacher_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teacher_img"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/Teacher_textview"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        </LinearLayout>
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center"
          >


        <androidx.cardview.widget.CardView
            android:id="@+id/parents_card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:clickable="true"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp"
            android:layout_margin="10dp"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <ImageView
                    android:id="@+id/parents_imag"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/parentimg" />

                <TextView
                    android:id="@+id/parents_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/parents_imag"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/Parent_textview"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:id="@+id/admin_card"
              android:layout_width="150dp"
              android:layout_height="150dp"
              android:clickable="true"
              app:cardCornerRadius="15dp"
              app:cardElevation="15dp"
              android:layout_margin="10dp"

              >

              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"

                  >

                  <ImageView
                      android:id="@+id/admin_imag"
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:layout_alignParentTop="true"
                      android:layout_centerHorizontal="true"
                      android:layout_margin="5dp"
                      android:src="@drawable/adminimg" />

                  <TextView
                      android:id="@+id/admin_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/admin_imag"
                      android:layout_centerHorizontal="true"
                      android:layout_marginTop="10dp"
                      android:text="@string/Admin_textview"
                      android:textColor="@android:color/black"
                      android:textSize="20dp" />
              </RelativeLayout>

          </androidx.cardview.widget.CardView>


      </LinearLayout>

 </LinearLayout>

    </ScrollView>





